src/hoppet_cxx_oo.F90


  function hoppet_cxx__grid_quant__at_y(grid_ptr, data_ptr, y) bind(C) result(res)
    implicit none
    type(c_ptr), intent(in), value :: grid_ptr, data_ptr
    real(c_double), intent(in), value :: y
    real(c_double) :: res
    !--
    type(grid_def), pointer :: grid
    real(dp), pointer :: gq(:)

    call c_f_pointer(grid_ptr, grid)
    call c_f_pointer(data_ptr, gq, [grid%ny+1])
    res = EvalGridQuant(grid, gq, y)
  end function hoppet_cxx__grid_quant__at_y

  function hoppet_cxx__grid_quant__data_ptr(ptr) bind(C) result(data_ptr)
    implicit none
    type(c_ptr), intent(in), value :: ptr
    type(c_ptr) :: data_ptr
    !--
    type(grid_quant), pointer :: f_ptr

    call c_f_pointer(ptr, f_ptr)
    data_ptr = c_loc(f_ptr%data(0))
  end function hoppet_cxx__grid_quant__data_ptr

  function hoppet_cxx__grid_quant__trunc_mom(grid, data, n, ymax) bind(C) result(res)
    implicit none
    type(c_ptr),    intent(in), value :: grid, data  
    real(c_double), intent(in), value :: n
    real(c_double), intent(in)        :: ymax
    real(c_double) :: res
    !--
    type(grid_def),   pointer :: grid_ptr
    real(dp),         pointer :: data_ptr(:)

    call c_f_pointer(grid, grid_ptr)
    call c_f_pointer(data, data_ptr, shape=[grid_ptr%ny+1])
    res = TruncatedMoment(grid_ptr, data_ptr, n, ymax)
  end function hoppet_cxx__grid_quant__trunc_mom

  !! result_data = lumi(gq1,gq2)
  subroutine hoppet_cxx__grid_quant__luminosity(grid, gq1, gq2, result_data) bind(C)
    implicit none
    type(c_ptr), intent(in), value :: grid
    type(c_ptr), intent(in), value :: gq1
    type(c_ptr), intent(in), value :: gq2
    type(c_ptr), intent(in), value :: result_data
    !--
    type(grid_def), pointer :: grid_f
    real(dp), pointer :: gq1_f(:), gq2_f(:)
    real(dp), pointer :: result_data_f(:)

    call c_f_pointer(grid, grid_f)
    call c_f_pointer(gq1, gq1_f,                 shape=[grid_f%ny+1])
    call c_f_pointer(gq2, gq2_f,                 shape=[grid_f%ny+1])
    call c_f_pointer(result_data, result_data_f, shape=[grid_f%ny+1])

    result_data_f = PartonLuminosity(grid_f, gq1_f, gq2_f)
  end subroutine 

end module hoppet_cxx_oo_grid_quant

!=====================================================================
!! wrappers for C++ OO interface to grid quantities, with an intermediate
!! grid_quant type holds both the data and the grid_def
module hoppet_cxx_oo_grid_quant_2d
  use types, only: dp
  use, intrinsic :: iso_c_binding
  use hoppet_cxx_oo_grid_def
  implicit none

  type grid_quant_2d
    real(dp), pointer :: data(:,:) => null()
    type(grid_def)    :: grid
  end type grid_quant_2d

contains

  function hoppet_cxx__grid_quant_2d__new(grid_def_ptr, size) bind(C) result(ptr)
    implicit none
    type(c_ptr),    intent(in), value :: grid_def_ptr
    integer(c_int), intent(in), value :: size
    type(c_ptr) :: ptr
    !--
    type(grid_quant_2d), pointer :: f_ptr
    type(grid_def), pointer :: grid

    allocate(f_ptr)
    call c_f_pointer(grid_def_ptr, grid)
    call AllocGridQuant(grid, f_ptr%data, 0, size-1)
    f_ptr%grid = grid
    ptr = c_loc(f_ptr)
  end function hoppet_cxx__grid_quant_2d__new

  subroutine hoppet_cxx__grid_quant_2d__delete(ptr) bind(C)
    implicit none
    type(c_ptr), intent(inout) :: ptr
    !--
    type(grid_quant_2d), pointer :: f_ptr

    call c_f_pointer(ptr, f_ptr)
    if (associated(f_ptr%data)) then
      deallocate(f_ptr%data)
    end if
    !print * , associated(f_ptr)
    deallocate(f_ptr)
    ptr = c_null_ptr
  end subroutine hoppet_cxx__grid_quant_2d__delete

!  function hoppet_cxx__grid_quant__at_y(grid_ptr, data_ptr, y) bind(C) result(res)
!    implicit none
!    type(c_ptr), intent(in), value :: grid_ptr, data_ptr
!    real(c_double), intent(in), value :: y
!    real(c_double) :: res
!    !--
!    type(grid_def), pointer :: grid
!    real(dp), pointer :: gq(:)
!
!    call c_f_pointer(grid_ptr, grid)
!    call c_f_pointer(data_ptr, gq, [grid%ny+1])
!    res = EvalGridQuant(grid, gq, y)
!  end function hoppet_cxx__grid_quant__at_y

  function hoppet_cxx__grid_quant_2d__data_ptr(ptr) bind(C) result(data_ptr)
    implicit none
    type(c_ptr), intent(in), value :: ptr
    type(c_ptr) :: data_ptr
    !--
    type(grid_quant_2d), pointer :: f_ptr

    call c_f_pointer(ptr, f_ptr)
    data_ptr = c_loc(f_ptr%data(0, 0))
  end function hoppet_cxx__grid_quant_2d__data_ptr

!  function hoppet_cxx__grid_quant__trunc_mom(grid, data, n, ymax) bind(C) result(res)
!    implicit none
!    type(c_ptr),    intent(in), value :: grid, data  
!    real(c_double), intent(in), value :: n
!    real(c_double), intent(in)        :: ymax
!    real(c_double) :: res
!    !--
!    type(grid_def),   pointer :: grid_ptr
!    real(dp),         pointer :: data_ptr(:)
!
!    call c_f_pointer(grid, grid_ptr)
!    call c_f_pointer(data, data_ptr, shape=[grid_ptr%ny+1])
!    res = TruncatedMoment(grid_ptr, data_ptr, n, ymax)
!  end function hoppet_cxx__grid_quant__trunc_mom
end module hoppet_cxx_oo_grid_quant_2d

!=====================================================================
!! wrappers for C++ OO interface to grid_conv objects
module hoppet_cxx_oo_grid_conv
  use types, only: dp
  use, intrinsic :: iso_c_binding
  use hoppet_cxx_oo_grid_def
  use hoppet_cxx_oo_grid_quant
  implicit none


  abstract interface
    function conv_ignd_c_interface(y, piece) bind(C) result(res)
      import :: c_double, c_int
      real(c_double), intent(in), value :: y
      integer(c_int), intent(in), value :: piece
      real(c_double) :: res
    end function conv_ignd_c_interface
  end interface


  type, extends(conv_ignd) :: conv_ignd_from_c
    !type(c_funptr) :: fptr  = c_null_funptr
    type(c_ptr)    :: ctx   = c_null_ptr  
  contains
    procedure :: f => conv_ignd_from_c__f! f(this, y, piece)
  end type conv_ignd_from_c
  interface
    function hoppet_grid_conv_f__wrapper(y, piece, ctx) bind(C)
      use, intrinsic :: iso_c_binding
      real(c_double), intent(in), value :: y
      integer(c_int), intent(in), value :: piece
      type(c_ptr),    intent(in), value :: ctx
      real(c_double) :: hoppet_grid_conv_f__wrapper
    end function hoppet_grid_conv_f__wrapper
  end interface

contains

  !! return a c pointer to a new grid_conv constructed from a conv_ignd_c_interface object
  function hoppet_cxx__grid_conv__new_from_fn(grid_ptr, conv_ignd_c_fn_obj, split_array_ptr, nsplit) bind(C) result(ptr)
    use warnings_and_errors
    implicit none
    type(c_ptr), intent(in), value :: grid_ptr
    type(c_ptr), intent(in), value :: conv_ignd_c_fn_obj
    type(c_ptr), intent(in), value :: split_array_ptr
    integer(c_int), intent(in), optional :: nsplit
    type(c_ptr) :: ptr
    !--
    type(grid_conv), pointer :: gc
    type(grid_def), pointer :: grid
    procedure(conv_ignd_c_interface), pointer :: conv_ignd_f_fn
    type(conv_ignd_from_c) :: lcl_conv_ignd
    real(dp), pointer :: split_array_f(:)

    call c_f_pointer(grid_ptr, grid)
    lcl_conv_ignd%ctx = conv_ignd_c_fn_obj

    allocate(gc)
    if (c_associated(split_array_ptr)) then
      if (.not. present(nsplit)) then
        call wae_error("hoppet_cxx__grid_conv__new_from_fn: nsplit must be provided if split_array_ptr is associated")
      end if
      call c_f_pointer(split_array_ptr, split_array_f, shape=[nsplit])
      call InitGridConv(grid, gc, lcl_conv_ignd, alloc=.true., split=split_array_f)
    else
      call InitGridConv(grid, gc, lcl_conv_ignd, alloc=.true.)
    end if
    call InitGridConv(grid, gc, lcl_conv_ignd, alloc=.true.)
    ptr = c_loc(gc)
  end function hoppet_cxx__grid_conv__new_from_fn

  !! return a c pointer to a new grid_conv that is a copy of gc_other
  function hoppet_cxx__grid_conv__new_from_gc(gc_other) bind(C) result(ptr)
    implicit none
    type(c_ptr), intent(in), value :: gc_other
    type(c_ptr) :: ptr
    !--
    type(grid_conv), pointer :: gc
    type(grid_conv), pointer :: gc_other_f

    call c_f_pointer(gc_other, gc_other_f)
    allocate(gc)
    call InitGridConv(gc, gc_other_f, alloc=.true.)
    ptr = c_loc(gc)
  end function hoppet_cxx__grid_conv__new_from_gc

  !! copy the contents of gc_src into gc_dest
  subroutine hoppet_cxx__grid_conv__copy_contents(dest, src) bind(C)
    implicit none
    type(c_ptr), intent(in), value :: dest, src
    !--
    type(grid_conv), pointer :: dest_f, src_f

    call c_f_pointer(dest, dest_f)
    call c_f_pointer(src, src_f)

    call InitGridConv(dest_f, src_f)
  end subroutine hoppet_cxx__grid_conv__copy_contents


  !! implementation of conv_ignd_from_c%f
  function conv_ignd_from_c__f(this, y, piece) result(res)
    class(conv_ignd_from_c), intent(in) :: this
    real(dp), intent(in) :: y
    integer,  intent(in) :: piece
    real(dp) :: res

    res = hoppet_grid_conv_f__wrapper(y, piece, this%ctx)
  end function conv_ignd_from_c__f

  !! delete a grid_conv object (and the the associated fortran object)
  subroutine hoppet_cxx__grid_conv__delete(ptr) bind(C)
    implicit none
    type(c_ptr), intent(inout) :: ptr
    !--
    type(grid_conv), pointer :: gc

    call c_f_pointer(ptr, gc)
    call delete(gc)
    deallocate(gc)
    ptr = c_null_ptr
  end subroutine hoppet_cxx__grid_conv__delete

  !! result_data = conv * q_data
  subroutine hoppet_cxx__grid_conv__times_grid_quant(conv_ptr, q_data, result_data) bind(C)
    implicit none
    type(c_ptr), intent(in), value :: conv_ptr
    type(c_ptr), intent(in), value :: q_data
    type(c_ptr), intent(in), value :: result_data
    !--
    type(grid_conv), pointer :: gc
    real(dp), pointer :: q(:)
    real(dp), pointer :: result(:)

    call c_f_pointer(conv_ptr, gc)
    call c_f_pointer(q_data, q, shape=[gc%grid%ny+1])
    call c_f_pointer(result_data, result, shape=[gc%grid%ny+1])

    result = gc * q
  end subroutine hoppet_cxx__grid_conv__times_grid_quant


  !! conv1 += conv2
  subroutine hoppet_cxx__grid_conv__add(conv1, conv2, factor) bind(C)
    implicit none
    type(c_ptr),    intent(in), value    :: conv1, conv2
    real(c_double), intent(in), optional :: factor
    type(grid_conv), pointer :: conv1_f, conv2_f
    call c_f_pointer(conv1, conv1_f)
    call c_f_pointer(conv2, conv2_f)
    call AddWithCoeff(conv1_f,conv2_f,fact=factor)
  end subroutine hoppet_cxx__grid_conv__add

  !! conv1 *=factor
  subroutine hoppet_cxx__grid_conv__multiply(conv1, factor) bind(C)
    implicit none
    type(c_ptr),    intent(in), value :: conv1
    real(c_double), intent(in), value :: factor
    type(grid_conv), pointer :: conv1_f
    call c_f_pointer(conv1, conv1_f)
    call Multiply(conv1_f,factor)
  end subroutine hoppet_cxx__grid_conv__multiply

  !! allocate a new grid_conv that is the convolution of conv1 and conv2
  function hoppet_cxx__grid_conv__alloc_and_conv(conv1, conv2) bind(C) result(res)
    implicit none
    type(c_ptr),    intent(in), value :: conv1, conv2
    type(c_ptr) :: res
    type(grid_conv), pointer :: conv1_f, conv2_f, res_f

    call c_f_pointer(conv1, conv1_f)
    call c_f_pointer(conv2, conv2_f)
    allocate(res_f)
    call AllocGridConv(conv1_f%grid, res_f)
    call SetToConvolution(res_f, conv1_f, conv2_f)
    res = c_loc(res_f)
  end function hoppet_cxx__grid_conv__alloc_and_conv

  function hoppet_cxx__grid_conv__moment(conv, momN) bind(C) result(res)
    implicit none
    type(c_ptr),    intent(in), value :: conv
    real(c_double), intent(in), value :: momN
    real(c_double) :: res
    type(grid_conv), pointer :: conv_f

    call c_f_pointer(conv, conv_f)
    res = gc_moment(conv_f, momN)
  end function hoppet_cxx__grid_conv__moment
